--- a/uvodni_stranka.html
+++ b/uvodni_stranka.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="./img/800px-Flag_of_Slovakia.svg.png">
 </head>
 
 <body>
@@ -42,7 +43,7 @@
                         <a class="nav-link dropdown-toggle text-white" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Otestujte si znalosti</a>
                         <div class="dropdown-menu" aria-labelledby="dropdownId">
                             <a class="dropdown-item" href="#">Historický kvíz</a>
-                            <a class="dropdown-item" href="#">Interaktivní mapa</a>
+                            <a class="dropdown-item" href="mapa.html">Interaktivní mapa</a>
                         </div>
                     </li>
                 </ul>
