--- a/mapa.html
+++ b/mapa.html
@@ -177,6 +177,7 @@
     <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
 
     <script src="js/geografie.js"></script>
+    <script src="js/selectors.js"></script>
 </body>
 
 </html>
